# pydevlpr

./: LICENSE  README.md  README.rst  benchmark.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
devlpr_plugin/: __init__.py  main.py
libdevlpr/: __init__.py  main.py  protocol.py
src/pydevlpr/: DevlprClient.py  DevlprServer.py  __init__.py  main.py  protocol.py  typing.py
tests/: MockServer.py  basic_test.py
